hphp/hack/test/typecheck/array_sub2.php.exp
File "array_sub2.php", line 21, characters 12-13:
Invalid argument (Typing[4110])
File "array_sub2.php", line 12, characters 29-32:
This is a bool
File "array_sub2.php", line 20, characters 15-19:
It is incompatible with an int
File "array_sub2.php", line 20, characters 15-19:
This can only be indexed with integers
